# serializer version: 1
# name: test_parse_output
  Receipt(amount=1.0, currency='USD', customer='John Doe')
# ---
# name: test_pydantic_parser_get_format_instructions
  '''
  - The output should be formatted as a JSON instance that conforms to the JSON schema below.
  
  - As an example, for the schema {"properties": {"foo": {"title": "Foo", "description": "a list of strings", "type": "array", "items": {"type": "string"}}}, "required": ["foo"]}}
  the object {"foo": ["bar", "baz"]} is a well-formatted instance of the schema. The object {"properties": {"foo": ["bar", "baz"]}} is not well-formatted.
  
  - Here is the output schema:
  ```
  {"description": "The Receipt for user", "properties": {"amount": {"title": "Amount", "type": "number"}, "currency": {"title": "Currency", "description": "ISO 4217 currency code", "type": "string"}, "customer": {"title": "Customer", "type": "string"}}, "required": ["amount", "currency", "customer"]}
  ```
  '''
# ---
# name: test_pydantic_parser_with_prompt[email.txt-Email][gpt response]
  Email(subject='Press Release: RIVERTON Industries - Revolutionizing the Aluminum Casting Industry for E-Bikes', body="Dear Press,\n\nWe are excited to announce the launch of RIVERTON Industries, a leading manufacturer and exporter of aluminum casting products for E-Bikes. With our innovative approach to aluminum frame manufacturing and one-stop solution for customized bike frames, we are revolutionizing the industry.\n\nEstablished in 2022, RIVERTON Industries has quickly gained a reputation for providing high-quality aluminum frames that meet international standards. Our main product, the Aluminum frame for E-bike, offers increased rigidity, stability, and safety for riders. The one-piece-formed bike frame, made of aluminum pipeline, supports complex designs for electric bikes.\n\nIn addition to our ready-to-use products, we also provide vehicle assembly services tailored to our customers' requirements. Our commitment to customer satisfaction sets us apart and has made us a popular choice among customers.\n\nWe export our products to Europe and the USA, further expanding our reach and impact. If you're in search of high-quality aluminum frames for your E-bikes, visit our website at https://riverton.example.com/.\n\nFor more information, please contact us at [email protected] or call us at +1-123-456-7890.\n\nSincerely,\nRIVERTON Industries")
# ---
# name: test_pydantic_parser_with_prompt[email.txt-Email][instructoin]
  '''
  Given the press release article of our company: "RIVERTON Industries - Revolutionizing the Aluminum Casting Industry for E-Bikes
  
  RIVERTON Industries is a leading manufacturer and exporter of aluminum casting products for E-Bikes. Established in 2022, the company has quickly gained a reputation for its innovative approach to aluminum frame manufacturing. We offer one-stop solutions for customized bike frames, which include designing, manufacturing, and assembly services.
  
  ### About RIVERTON Industries
  RIVERTON Industries is an innovative international company specializing in aluminum casting products for E-Bikes. The company is committed to providing innovative aluminum frames built for bicycles and modular features for multiple modeling combinations. We offer ready-to-use products and vehicle assembly services that meet customer satisfaction and provide specialized services tailored to their requirements.
  
  RIVERTON Industries is revolutionizing the aluminum casting industry for E-bikes. Our main product, the Aluminum frame for E-bike, is available in three models - 001, 002, and 003 but more could be customized. The one-piece-formed bike frame provides increased rigidity, improving the stability and safety of the ride. The solid frame made of aluminum pipeline built-in supports complex designs for electric bikes.
  
  Our one-stop solution for customized bike frames has made us a popular choice among customers. We offer a range of products, including the Electric bike frame, Aluminum motor frames for E-bikes, Motor frames for E-bikes, and Customized Motor frames for E-bikes.
  
  RIVERTON Industries exports its products to Europe and the USA. Our commitment to quality has earned us a reputation for producing high-quality aluminum frames that meet international standards.
  
  In conclusion, RIVERTON Industries is a company that is revolutionizing the aluminum casting industry for E-bikes. Our innovative approach to manufacturing aluminum frames and one-stop solutions for customized bike frames has made us a popular choice among customers. If you're looking for high-quality aluminum frames for your E-bikes, visit our website at https://riverton.example.com/."
  
  '''
# ---
